--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="utf-8" />
   <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap" rel="stylesheet">
   <title>Note App</title>
 </head>
 
-<body >
+<body>
   <div id="root">
-  
+
   </div>
-  
+
 </body>
 
 </html>
